; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_xv.c_flip_page.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_xv.c_flip_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.TYPE_2__*, %struct.xvctx* }
%struct.TYPE_2__ = type { i32 }
%struct.xvctx = type { i64, i32, i32, i32* }

@False = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo*)* @flip_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flip_page(%struct.vo* %0) #0 {
  %2 = alloca %struct.vo*, align 8
  %3 = alloca %struct.xvctx*, align 8
  store %struct.vo* %0, %struct.vo** %2, align 8
  %4 = load %struct.vo*, %struct.vo** %2, align 8
  %5 = getelementptr inbounds %struct.vo, %struct.vo* %4, i32 0, i32 1
  %6 = load %struct.xvctx*, %struct.xvctx** %5, align 8
  store %struct.xvctx* %6, %struct.xvctx** %3, align 8
  %7 = load %struct.vo*, %struct.vo** %2, align 8
  %8 = load %struct.xvctx*, %struct.xvctx** %3, align 8
  %9 = getelementptr inbounds %struct.xvctx, %struct.xvctx* %8, i32 0, i32 3
  %10 = load i32*, i32** %9, align 8
  %11 = load %struct.xvctx*, %struct.xvctx** %3, align 8
  %12 = getelementptr inbounds %struct.xvctx, %struct.xvctx* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = getelementptr inbounds i32, i32* %10, i64 %13
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @put_xvimage(%struct.vo* %7, i32 %15)
  %17 = load %struct.xvctx*, %struct.xvctx** %3, align 8
  %18 = getelementptr inbounds %struct.xvctx, %struct.xvctx* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = add i64 %19, 1
  %21 = load %struct.xvctx*, %struct.xvctx** %3, align 8
  %22 = getelementptr inbounds %struct.xvctx, %struct.xvctx* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = sext i32 %23 to i64
  %25 = urem i64 %20, %24
  %26 = load %struct.xvctx*, %struct.xvctx** %3, align 8
  %27 = getelementptr inbounds %struct.xvctx, %struct.xvctx* %26, i32 0, i32 0
  store i64 %25, i64* %27, align 8
  %28 = load %struct.xvctx*, %struct.xvctx** %3, align 8
  %29 = getelementptr inbounds %struct.xvctx, %struct.xvctx* %28, i32 0, i32 2
  %30 = load i32, i32* %29, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %40, label %32

32:                                               ; preds = %1
  %33 = load %struct.vo*, %struct.vo** %2, align 8
  %34 = getelementptr inbounds %struct.vo, %struct.vo* %33, i32 0, i32 0
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* @False, align 4
  %39 = call i32 @XSync(i32 %37, i32 %38)
  br label %40

40:                                               ; preds = %32, %1
  ret void
}

declare dso_local i32 @put_xvimage(%struct.vo*, i32) #1

declare dso_local i32 @XSync(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
